Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2173

Partitions are pruned incorrectly when range-partitioned on a PK prefix

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 1.2.0, 1.3.1, 1.4.0, 1.5.0
    • 1.3.2, 1.2.1, 1.4.1, 1.6.0, 1.5.1
    • client
    • None

    Description

      Given a schema:

      Schema [
        0:a[int8 NOT NULL],
        1:b[int8 NOT NULL]
      ]
      PRIMARY KEY (a,b)
      

      and a partition:

      RANGE (a) PARTITION VALUES >= 10
      

      ... the partition pruner incorrectly handles the following scan spec:

       `a` < 11 AND `b` < 11
      

      ... and prunes the partition despite the possibility of it having a row like (10, 1)

      Attachments

        Activity

          People

            danburkert Dan Burkert
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: